--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -118,7 +118,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_centerInParent="true"
                         android:layout_weight="1"
-                        android:hint="Enter the review date" />
+                        android:hint="@string/review_date_hint" />
 
                     <Button
                         android:id="@+id/kino_review_date_button"
