[Cinelog] extract missing translation

--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -127,7 +127,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerInParent="true"
                         android:onClick="showTimePickerDialog"
-                        android:text="Changer"
+                        android:text="@string/review_change_reviewdate"
                         tools:ignore="RelativeOverlap" />
                 </RelativeLayout>
 
