--- a/app/src/main/res/layout/activity_import_db.xml
+++ b/app/src/main/res/layout/activity_import_db.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".importdb.ImportInDb">
+    tools:context=".io.importdb.ImportInDb">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
