[Cinelog] package refactor

--- a/app/src/main/res/layout/activity_view_unregistered_kino.xml
+++ b/app/src/main/res/layout/activity_view_unregistered_kino.xml
@@ -23,7 +23,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ViewUnregisteredKino">
+    tools:context=".android.activities.ViewUnregisteredKino">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
