--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -26,7 +26,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".EditReview"
+    tools:context=".android.activities.EditReview"
     tools:showIn="@layout/activity_edit_review">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
