--- a/app/src/main/res/layout/content_view_kino.xml
+++ b/app/src/main/res/layout/content_view_kino.xml
@@ -24,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ViewKino"
+    tools:context=".android.activities.ViewKino"
     tools:showIn="@layout/activity_view_kino">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
