--- a/app/src/main/res/layout/activity_add_serie.xml
+++ b/app/src/main/res/layout/activity_add_serie.xml
@@ -23,7 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".android.activities.add.AddKino">
+    tools:context=".android.activities.add.AddSerieActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
