--- a/app/src/main/res/layout/content_add_serie.xml
+++ b/app/src/main/res/layout/content_add_serie.xml
@@ -28,8 +28,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".android.activities.add.AddKino"
-    tools:showIn="@layout/activity_add_kino">
+    tools:context=".android.activities.add.AddSerieActivity"
+    tools:showIn="@layout/activity_add_serie">
 
     <EditText
         android:id="@+id/kino_search"
