--- a/app/src/main/res/layout/content_import_db.xml
+++ b/app/src/main/res/layout/content_import_db.xml
@@ -28,7 +28,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".android.activities.AddKino"
+    tools:context=".android.activities.add.AddKino"
     tools:showIn="@layout/activity_import_db">
 
     <TextView
