--- a/app/src/main/res/layout/fragment_serie.xml
+++ b/app/src/main/res/layout/fragment_serie.xml
@@ -21,17 +21,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
- <!--   <ListView
+   <ListView
         android:id="@+id/kino_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>-->
-
+        android:layout_height="wrap_content"/>
+<!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         style="@style/TextAppearance.AppCompat.Large"
-        android:text="Coming soon..."/>
+        android:text="Coming soon..."/>-->
 
 </LinearLayout>
