[Cinelog] implement a dark theme

--- a/app/src/main/res/layout/main_result_item.xml
+++ b/app/src/main/res/layout/main_result_item.xml
@@ -48,7 +48,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:text="Large Text"
         android:textStyle="italic"
         android:id="@+id/main_result_kino_year"
