--- a/app/src/main/res/layout/content_review_view.xml
+++ b/app/src/main/res/layout/content_review_view.xml
@@ -74,6 +74,7 @@
                     android:id="@+id/view_kino_review_review_date_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="?android:textAppearanceSmall"
                     android:textStyle="bold"
                     android:text="@string/view_kino_review_review_date_label_value"/>
                 <TextView
@@ -81,6 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    style="?android:textAppearanceSmall"
                     tools:ignore="RelativeOverlap" />
             </RelativeLayout>
 
