--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -87,6 +87,7 @@
                 <RatingBar
                     android:id="@+id/kino_rating_bar"
                     style="?android:attr/ratingBarStyleSmall"
+                    android:theme="@style/RatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
