--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/white</item>
+        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="android:textAppearanceButton">@style/ButtonTextAppearence</item>
+
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@color/colorBackgroundDark</item>
+        <item name="android:textColorTertiary">@color/colorBackgroundDark</item>
+        <item name="android:textColorHint">@color/lightGray</item>
+
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -107,6 +115,10 @@
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="ButtonTextAppearence" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
