[Cinelog / IO] add possibility to automatically export movies at app launch (once per day)

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -40,6 +40,12 @@
             android:key="theme"
             android:title="@string/theme"
             android:defaultValue="false"/>
+
+        <CheckBoxPreference
+            android:key="automatic_save"
+            android:title="@string/automatic_save"
+            android:summary="@string/automatic_save_summary"
+            android:defaultValue="false"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
