--- a/app/src/main/res/menu/menu_serie.xml
+++ b/app/src/main/res/menu/menu_serie.xml
@@ -40,6 +40,16 @@
 
     </item>
     <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="@string/action_export"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_import"
+        android:orderInCategory="100"
+        android:title="@string/action_import"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
