[CineLog / Wishlist] use a default image when no one is provided in view of a wishlist item

--- a/app/src/main/res/layout/content_kino_view.xml
+++ b/app/src/main/res/layout/content_kino_view.xml
@@ -43,7 +43,8 @@
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/noimage" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/view_kino_tmdb_title_layout"
