[CineLog] update theme thanks to theme and icon from KerstinMaur

--- a/app/src/main/res/layout/content_edit_review.xml
+++ b/app/src/main/res/layout/content_edit_review.xml
@@ -86,8 +86,7 @@
 
                 <RatingBar
                     android:id="@+id/kino_rating_bar"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:theme="@style/RatingBar"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
