--- a/app/src/main/res/layout/wishlist_search_result_item.xml
+++ b/app/src/main/res/layout/wishlist_search_result_item.xml
@@ -32,7 +32,7 @@
         android:minHeight="40dp"
         android:minWidth="60dp"
         android:paddingRight="5dp"
-        android:src="@drawable/noimage" />
+        android:src="@drawable/noimage_purple" />
 
     <TextView
         android:id="@+id/kino_title"
