[ CineLog / UI ] rewrite style to use both primary and secondary colors + rewrite dark theme => darker

--- a/app/src/main/res/layout/activity_view_unregistered_kino.xml
+++ b/app/src/main/res/layout/activity_view_unregistered_kino.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- CineLog Copyright 2018 Pierre Rognon
+ CineLog Copyright 2019 Pierre Rognon
 
  This file is part of CineLog.
  CineLog is free software: you can redistribute it and/or modify
@@ -23,19 +23,19 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="?attr/foregroundColor"
     tools:context=".android.activities.ViewUnregisteredKino">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarLayout">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="?attr/colorPrimary"/>
 
     </android.support.design.widget.AppBarLayout>
 
