--- a/app/src/main/res/layout/activity_add_kino.xml
+++ b/app/src/main/res/layout/activity_add_kino.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- CineLog Copyright 2018 Pierre Rognon
+ CineLog Copyright 2019 Pierre Rognon
  kinolog Copyright (C) 2017  ryan rigby
 
  This file is part of CineLog.
@@ -18,24 +18,22 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="?attr/foregroundColor"
     tools:context=".android.activities.add.AddKino">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarLayout">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="?attr/actionBarSize"/>
 
     </android.support.design.widget.AppBarLayout>
 
