--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
- CineLog Copyright 2018 Pierre Rognon
+ CineLog Copyright 2019 Pierre Rognon
  kinolog Copyright (C) 2017  ryan rigby
 
  This file is part of CineLog.
@@ -18,9 +18,11 @@
 -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/foregroundColor"
     android:fitsSystemWindows="true">
 
     <FrameLayout
@@ -38,24 +40,20 @@
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.AppBarOverlay">
+                android:theme="@style/AppTheme.AppBarLayout">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"
-                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+                    android:layout_height="?attr/actionBarSize"/>
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/category_tabs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary"
                     app:tabGravity="fill"
                     app:tabMode="fixed"
-                    app:tabTextColor="@color/white" />
+                    app:tabTextColor="@color/colorSecondaryLight" />
             </android.support.design.widget.AppBarLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -91,6 +89,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:menu="@menu/drawer_view"
-        app:headerLayout="@layout/nav_header" />
+        app:itemTextAppearance="@style/AppTheme.ItemTextAppearance"
+        app:headerLayout="@layout/nav_header"
+        style="@style/AppTheme.NavigationView"
+        tools:ignore="UnusedAttribute" />
 
 </android.support.v4.widget.DrawerLayout>
