--- a/app/src/main/res/layout/header_result_item.xml
+++ b/app/src/main/res/layout/header_result_item.xml
@@ -16,20 +16,32 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimaryLight"
-    android:paddingStart="5dp"
-    android:paddingEnd="5dp">
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:backgroundTint="@color/colorSecondaryDark"
+        app:cardElevation="0dp"
+        tools:ignore="UnusedAttribute">
 
     <TextView
         android:id="@+id/main_result_kino_title"
+        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="Large Text"
         android:textColor="@color/white"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
