--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,22 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="172dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="@color/colorSecondaryDark"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="128dp"
-        android:src="@drawable/feature_graphic_purple" />
-
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingStart="16dp"
-        android:gravity="top"
+        android:paddingBottom="16dp"
+        android:gravity="center_vertical"
         android:text="@string/nav_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/white"
         tools:ignore="RtlSymmetry" />
 
 </LinearLayout>
