--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,8 @@
     <color name="colorBackgroundDark">#555555</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="lightGray">#D3D3D3</color>
+    <color name="lightenGray">#f0f0f0</color>
+    <color name="darkGray">#0f0f0f</color>
 </resources>
