--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,73 +20,88 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimaryLight</item>
-        <item name="android:colorBackground">@color/white</item>
-        <item name="colorButtonNormal">@color/colorPrimaryLight</item>
-        <item name="android:textAppearanceButton">@style/ButtonTextAppearence</item>
+        <item name="colorPrimary">@color/colorSecondary</item>
+        <item name="colorPrimaryDark">@color/colorSecondaryDark</item>
+        <item name="colorAccent">@color/colorPrimary</item>
 
-        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:textAppearanceButton">@style/AppTheme.Button</item>
+
+        <item name="backgroundColor">@color/lightenGray</item>
+        <item name="foregroundColor">@color/white</item>
+
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/colorBackgroundDark</item>
+        <item name="android:textColorTertiary">@color/colorBackgroundDark</item>
+        <item name="android:textColorHint">@color/lightGray</item>
+
+        <item name="android:ratingBarStyle">@style/AppTheme.RatingBar</item>
+    </style>
+
+    <style name="AppTheme.AppBarLayout" parent="Base.Widget.Design.AppBarLayout">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
+    </style>
+
+    <style name="AppTheme.NavigationView" parent="Widget.Design.NavigationView">
+        <item name="android:background">@color/colorSecondaryDark</item>
+    </style>
+
+    <style name="AppTheme.Button" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AppTheme.ItemTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- overridden in v21 -->
+    <style name="AppTheme.RatingBar" parent="Widget.AppCompat.RatingBar" />
+
+
+    <!-- DARK THEME-->
+
+    <style name="AppThemeDark" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorSecondaryDark</item>
+        <item name="colorPrimaryDark">@color/colorSecondary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:textAppearanceButton">@style/AppTheme.ButtonDark</item>
+
+        <item name="backgroundColor">@color/black</item>
+        <item name="foregroundColor">@color/darkGray</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/colorBackgroundDark</item>
         <item name="android:textColorTertiary">@color/colorBackgroundDark</item>
         <item name="android:textColorHint">@color/lightGray</item>
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <item name="android:ratingBarStyle">@style/AppTheme.RatingBar</item>
     </style>
 
-    <!-- Base application theme. -->
-    <style name="AppThemeDark" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimaryLight</item>
-        <item name="android:colorBackground">@color/colorBackgroundDark</item>
-        <item name="colorButtonNormal">@color/colorPrimaryDark</item>
+    <style name="AppTheme.ListView">
+        <item name="android:background">@color/lightenGray</item>
+    </style>
 
-        <item name="android:textColorPrimary">@color/primaryTextColor</item>
-        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
-        <item name="android:textColorTertiary">@color/secondaryTextColor</item>
-        <item name="android:textColorHint">@color/colorPrimaryLight</item>
+    <style name="AppTheme.ListViewDark">
+        <item name="android:background">@color/black</item>
+    </style>
 
-        <item name="android:ratingBarStyleSmall">@style/RatingBarDark</item>
-        <item name="android:ratingBarStyle">@style/RatingBarDark</item>
-
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
-    <style name="RatingBarDark" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorControlNormal">@color/colorPrimaryLight</item>
-        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="DarkDialog" parent="ThemeOverlay.AppCompat.Dialog">
-        <item name="android:windowBackground">@color/colorBackgroundDark</item>
-        <item name="android:colorBackground">@color/colorBackgroundDark</item>
-    </style>
-
-    <style name="PreferenceDark">
-        <item name="android:windowBackground">@color/colorBackgroundDark</item>
-        <item name="android:background">@color/colorBackgroundDark</item>
-        <item name="android:colorBackground">@color/colorBackgroundDark</item>
-        <item name="android:color">@color/colorBackgroundDark</item>
+        <item name="android:windowBackground">@color/darkGray</item>
+        <item name="android:colorBackground">@color/darkGray</item>
     </style>
 
     <style name="PrefsThemeDark" parent="AppTheme.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryLight</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
@@ -100,28 +115,17 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
-        <item name="android:background">@color/colorBackgroundDark</item>
-        <item name="android:colorBackground">@color/colorBackgroundDark</item>
-        <item name="android:itemBackground">@color/colorBackgroundDark</item>
-        <item name="android:windowBackground">@color/colorBackgroundDark</item>
+        <item name="android:background">@color/darkGray</item>
+        <item name="android:colorBackground">@color/darkGray</item>
+        <item name="android:itemBackground">@color/darkGray</item>
+        <item name="android:windowBackground">@color/darkGray</item>
         <item name="android:textColor">@color/white</item>
 
         <item name="android:textColorAlertDialogListItem">@color/white</item>
     </style>
 
-    <style name="PrefsTheme" parent="AppTheme.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorPrimaryLight</item>
-        <item name="android:colorBackground">@color/white</item>
-
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="AppTheme.ButtonDark" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/darkGray</item>
     </style>
-
-    <style name="ButtonTextAppearence" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="android:textColor">@color/white</item>
-    </style>
-
 
 </resources>
